# chrysus

./: .gitignore  README.md  commit_times.txt  pyproject.toml
src/chryseos/: __init__.py  version.txt
src/chryseos/backend/core/: llm_extractor.py  reader.py  table_controller.py
src/chryseos/utils/: logger.py
src/chrysus/: __init__.py  version.txt
src/chrysus/backend/: main.py
src/chrysus/backend/core/: account_holder.py  accounts_controller.py  available_models.py  informed_table.py  llm_extractor.py  table_controller.py  table_extractor.py  testing.py
src/chrysus/utils/: logger.py
src/frontend/: index.html
src/frontend/src/components/: AggregateStatsView.tsx  DescriptiveTablesView.tsx  MainContent.tsx  PdfUpload.tsx  RecommendationsView.tsx  Sidebar.tsx  TransactionView.tsx  UserList.tsx  ViewModeSelector.tsx
src/frontend/src/contexts/: UserContext.tsx
src/frontend/src/lib/: config.ts
src/frontend/src/pages/: Index.tsx
